--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -1,3 +1,3 @@
 * User's guide
   * [Getting_started Getting started]
-  * [Differences_with_Guice]
+  * [Differences_with_Guice Differences with Guice]
