--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -1,3 +1,5 @@
  * User's guide
   * [Getting_started Getting started]
+  * [Bindings]
+    * [Linked_bindings Linked bindings]
   * [Differences_with_Guice Differences with Guice]
