--- a/wiki/Binding_annotations.wiki
+++ b/wiki/Binding_annotations.wiki
@@ -1,6 +1,6 @@
 = Binding Annotations =
 
-Occasionally you'll want multiple bindings for a same type. For example, you might want both a PayPal credit card processor and a Google Checkout processor. To enable this, bindings support an optional binding annotation. The annotation and type together uniquely identify a binding. This pair is called a key. 
+Occasionally you'll want multiple bindings for a same type. For example, you might want both a !PayPal credit card processor and a Google Checkout processor. To enable this, bindings support an optional binding annotation. The annotation and type together uniquely identify a binding. This pair is called a key. 
 
 Defining a binding annotation requires a few lines of code. You need to create an instance that implements {{{IAnnotation}}}. A simple annotation can be created like this:
 
