--- a/wiki/Instance_bindings.wiki
+++ b/wiki/Instance_bindings.wiki
@@ -11,4 +11,4 @@ You can bind a type to a specific instance of that type. This is usually only us
         .toInstance(10);
 }}}
 
-Avoid using {{{.toInstance}}} with objects that are complicated to create, since it can slow down application startup. You can use an [Provides_methods Provides method] instead.
+Avoid using {{{.toInstance}}} with objects that are complicated to create, since it can slow down application startup. You can use an Provides method instead.
