--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -4,4 +4,5 @@
     * [Linked_bindings Linked bindings]
     * [Binding_annotations Binding annotations]
     * [Instance_bindings Instance bindings]
+    * [Provides_methods Provides methods]
   * [Differences_with_Guice Differences with Guice]
