Edited wiki page Sidebar through web user interface.

--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -6,4 +6,5 @@
     * [Instance_bindings Instance bindings]
     * [Provides_methods Provides methods]
     * [Provider_bindings Provider bindings]
+    * [Untargetted_bindings Untargetted bindings]
   * [Differences_with_Guice Differences with Guice]
