--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -8,4 +8,5 @@
     * [Provider_bindings Provider bindings]
     * [Untargetted_bindings Untargetted bindings]
     * [Built_in_bindings Built-in bindings]
+    * [Just_in_time_bindings Just-in-time bindings]
   * [Differences_with_Guice Differences with Guice]
