Edited wiki page Sidebar through web user interface.

--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -9,4 +9,5 @@
     * [Untargetted_bindings Untargetted bindings]
     * [Built_in_bindings Built-in bindings]
     * [Just_in_time_bindings Just-in-time bindings]
+  * [Scopes]
   * [Differences_with_Guice Differences with Guice]
