--- a/wiki/Getting_started.wiki
+++ b/wiki/Getting_started.wiki
@@ -5,7 +5,7 @@
 
 With dependency injection, objects accept dependencies in their constructors, properties and methods. To construct an object, you first build it's dependencies. But to build each dependency, you need its dependencies, and so on.
 
-To illustrate, we'll start the RealBillingService class that accepts its dependent interfaces ICreditCardProcessor and ITransactionLog in its constructor. To make it explicit that the RealBillingService constructor is invoked by Gunk, we add the [Inject] annotation. Note that ActionScript does not preserve constructor annotations, this is why we use the [Constructor] annotation at class level:
+To illustrate, we'll start the {{{RealBillingService}}} class that accepts its dependent interfaces {{{ICreditCardProcessor}}} and {{{ITransactionLog}}} in its constructor. To make it explicit that the {{{RealBillingService}}} constructor is invoked by Gunk, we add the [Inject] annotation. Note that !ActionScript does not preserve constructor annotations, this is why we use the {{{[Constructor]}}} annotation at class level:
 
 {{{
 [Constructor("[Inject]")]
@@ -27,7 +27,7 @@ class RealBillingService implements IBillingService
 }
 }}}
 
-We want to build a RealBillingService using PaypalCreditCardProcessor and DatabaseTransactionLog. Gunk uses bindings to map types to their implementations. A module is a collection of bindings specified using fluent, English-like method calls:
+We want to build a {{{RealBillingService}}} using {{{PaypalCreditCardProcessor}}} and {{{DatabaseTransactionLog}}}. Gunk uses bindings to map types to their implementations. A module is a collection of bindings specified using fluent, English-like method calls:
 
 {{{
 public class BillingModule extends AbstractModule 
@@ -49,7 +49,7 @@ public class BillingModule extends AbstractModule
 }
 }}}
 
-The modules are the building blocks of an injector, which is Gunk's builder. First we create the injector, and then we can use that to build the RealBillingService:
+The modules are the building blocks of an injector, which is Gunk's builder. First we create the injector, and then we can use that to build the {{{RealBillingService}}}:
 
 {{{
 public function main():void
